# rendering_demo

./: Cargo.toml  README.md
math/: Cargo.toml
math/src/: lib.rs
src/: main.rs  settings.rs  teapot.rs
src/shaders/: mod.rs  shader.frag  shader.vert
