[package]
name = "rendering_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.32"
vulkano-win = "0.32"
vulkano-shaders = "0.32"
winit = "0.27"
bytemuck = "1.12"
obj-rs = "0.7"
math = { path="./math" }
cgmath = "0.18"


[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
ar = "/usr/x86_64-w64-mingw32/bin/ar"